--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d84c6e;
+}
+
+#root {
+  display: flex;
+  height: 100vh;
 }
 
 code {
